# messenger

./: chat.cpp  chat.h  clientinfo.h  message.h  messenger.pro  user.cpp  user.h  userinfo.cpp  userinfo.h
client/: CMakeLists.txt  channel.cpp  channel.h  channelinfo.cpp  channelinfo.h  chat.cpp  chat.h  client.cpp  client.h  clientinfo.cpp  clientinfo.h  connector.cpp  connector.h  data_struct.h  group.cpp  group.h  groupinfo.cpp  groupinfo.h  listofcommands.h  main.cpp  message.cpp  message.h  user.cpp  user.h  userinfo.cpp  userinfo.h
client/ui/: chatdisplay.cpp  chatdisplay.h  chatwidget.cpp  chatwidget.h  clientinfo_widnow.cpp  clientinfo_widnow.h  clientlabel.cpp  clientlabel.h  clientlist.cpp  clientlist.h  clientsettings_window.cpp  clientsettings_window.h  login_window.cpp  login_window.h  mainwindow.cpp  mainwindow.h  messagewidget.cpp  messagewidget.h  messenger_window.cpp  messenger_window.h  registration_window.cpp  registration_window.h  settings_window.cpp  settings_window.h  user_label.cpp  user_label.h
server/: client.cpp  client.h  data_struct.h  database_connector.cpp  database_connector.h  listofcommands.h  mainwindow.cpp  message.cpp  message.h  messengerServer.pro  server.cpp  server.h
ui/: chatdisplay.cpp  chatdisplay.h  chatwidget.cpp  chatwidget.h  clientlabel.cpp  clientlabel.h  clientlist.cpp  clientlist.h  messagewidget.cpp  messagewidget.h  messenger_window.cpp  messenger_window.h  settingsui.h
